vlib/v/checker/tests/return_duplicate_with_none_err_a.vv
fn f() ?bool {
	return true
	return none
}
fn main() {
	f() or {
		println('fail')
	}
}
